<resources>

    <string name="app_name">Wookmark Viewer</string>
    <string name="title_activity_main">Wookmark Viewer</string>

    <!-- Fragment titles -->
    <string name="fragment_title_color_search">Color Search</string>
    <string name="fragment_title_new">New</string>
    <string name="fragment_title_popular">Popular</string>
    <string name="fragment_title_search">Search: %s</string>
    <string name="fragment_title_about">About</string>
    <string name="fragment_title_settings">Settings</string>

    <!-- Wookmark Endpoints -->
    <string name="wookmark_endpoint_popular">http://www.wookmark.com/api/json/popular</string>
    <string name="wookmark_endpoint_new">http://www.wookmark.com/api/json/recent</string>
    <string name="wookmark_endpoint_color">http://www.wookmark.com/api/json?type=color\u0026color=</string>
    <string name="wookmark_endpoint_search">http://www.wookmark.com/api/json?type=search\u0026term=</string>

    <!-- Wall View error messages -->
    <string name="wall_view_no_connection_message">There appears to be a problem with the connection. Please make sure
        you have internet connectivity.</string>

    <!-- Search views default search texts -->
    <string name="color_search_default_text">Search Color</string>
    <string name="text_search_default_text">Search</string>
    
    <!-- Search view bad input text -->
    <string name="text_search_bad_input_text">That search is no good! Try something else.</string>

    <!-- Image view option items -->
    <string name="image_view_menu_wookmark_com">View on Wookmark.com</string>
    <string name="image_view_menu_detail">Image details</string>
    <string name="image_view_menu_share">Share</string>
    <string name="image_view_lock_rotation">Lock Screen Rotation</string>

    <!-- Image view Share strings -->
    <string name="image_view_share_title">Share Image</string>
    <string name="image_view_share_content">Check out this image on Wookmark.com - %1$s - %2$s</string>
    <string name="image_view_share_subject">Check out this image on Wookmark.com</string>

    <!-- Image view detail strings -->
    <string name="image_view_detail_dialog_title">Image Details</string>
    <string name="image_view_dialog_image_title">title</string>
    <string name="image_view_dialog_image_width">width</string>
    <string name="image_view_dialog_image_height">height</string>
    <string name="image_view_dialog_image_referer">referer</string>
    <string name="image_view_dialog_image_no_title">(no title)</string>

    <!-- Image view orientation toast strings -->
    <string name="image_view_orientation_unlocked_toast">Screen orientation unlocked</string>
    <string name="image_view_orientation_locked_portrait_toast">Screen orientation locked to portrait</string>
    <string name="image_view_orientation_locked_landscape_toast">Screen orientation locked to landscape</string>

    <!-- About page strings -->
    <string name="about_view_app_heading">The App</string>
    <string name="about_view_app_detail">Wookmark Viewer is an app designed to help you quickly and easily browse 
        the latest and most popular images on the image bookmarking website Wookmark.com.
        \nIt offers the ability to search for images that have been tagged with certain words - for example, try
        a search for \'fruit\', or \'cars\'.
        \nAn interesting feature is the Color Search, allowing you to search for images that match a given color. Note
        that the color search may not return results for uncommon colors.
        \nNote that due to the nature of the Wookmark website and the way in which the images are provided (via the
        Wookmark API) it is not possible to filter out adult or not-safe-for-work content.</string>
    <string name="about_view_licenses_heading">Licenses</string>
    <string name="about_view_licenses_detail">This application is free and open source software. You can view the
        source code for this application on Github at the link below. This application is licensed under the Apache
        License, Version 2.0. The terms of this license are available at the link below. In addition there are a
        number of third party libraries which have been used, as detailed below.
        \nSource: https://github.com/adamsp/wookmark
        \nLicense: http://www.apache.org/licenses/LICENSE-2.0
        </string>
    <string name="about_view_licenses_heading_antipodal_wall">AntipodalWall</string>
    <string name="about_view_licenses_detail_antipodal_wall">This is the main \'Pinterest-style\' view
        that is used throughout the app. Wookmark Viewer uses a heavily modified version of this library, originally written
        by Daniel López Lacalle. The original, as well as my modified version, can be found linked below. AntipodalWall
        is licensed under the Apache License, Version 2.0.
        \nOriginal source: https://github.com/expilu/AntipodalWall
        \nModified source: https://github.com/adamsp/AntipodalWall
        \nLicense: http://www.apache.org/licenses/LICENSE-2.0</string>
    <string name="about_view_licenses_heading_sliding_menu">SlidingMenu</string>
    <string name="about_view_licenses_detail_sliding_menu">This is the menu library that provides the menu
        system used in Wookmark Viewer. I have made some minor modifications to the original (developed by Jeremy Feinstein)
        to support the ActionBarSherlock library. SlidingMenu is licensed under the Apache License, Version 2.0. Links to
        the original version, modified version and license can be found below.
        \nOriginal source: https://github.com/jfeinstein10/SlidingMenu
        \nModified source: https://github.com/adamsp/SlidingMenu
        \nLicense: http://www.apache.org/licenses/LICENSE-2.0</string>
    <string name="about_view_licenses_heading_lazy_list">LazyList</string>
    <string name="about_view_licenses_detail_lazy_list">This library from Fedor Vlasov is used to enable lazy
        downloading of images off the UI thread. It provides automatic caching of images to the SD card for fast loading
        later, as well as image scaling to preserve space. I\'ve made a few modifications to make scaling optional and provide
        some notification when an image has finished loading. This library is licensed under the MIT license. Links to the
        original source, modified source and license are provided below.
        \nOriginal source: https://github.com/thest1/LazyList
        \nModified source: https://github.com/adamsp/LazyList
        \nLicense: http://opensource.org/licenses/MIT</string>
    <string name="about_view_licenses_heading_actionbar_sherlock">ActionBarSherlock</string>
    <string name="about_view_licenses_detail_actionbar_sherlock">This library from Jake Wharton
        facilitates the use of the ActionBar design pattern on devices running Android 2.x and up. The native ActionBar
        implementation is used in Android 4.0 and upwards. ActionBarSherlock is licensed under the Apache License, Version
        2.0. Links to the source code and license can be found below.
        \nSource: https://github.com/JakeWharton/ActionBarSherlock
        \nLicense: http://www.apache.org/licenses/LICENSE-2.0</string>
    <string name="about_view_licenses_heading_color_picker">ColorPicker</string>
    <string name="about_view_licenses_detail_color_picker">ColorPicker - This Color Picker was originally written
        by Daniel Nilsson. The version I use in Wookmark Viewer is a modified version from Sergey Margaritov. This is
        available under the Apache License, Version 2.0, linked below along with the source code.
        \nSource: https://github.com/attenzione/android-ColorPickerPreference
        \nLicense: http://www.apache.org/licenses/LICENSE-2.0</string>

    <!-- Preferences strings -->
    <string name="pref_default_view_key">default_view</string>
    <string name="pref_default_view_dialog_title">Default View</string>
    <string name="pref_default_view_default_value">@string/fragment_title_popular</string>

    <string name="pref_number_columns_key">number_columns</string>
    <string name="pref_number_columns_dialog_title">Number of Columns</string>
    <string name="pref_number_columns_1">1 column</string>
    <string name="pref_number_columns_2">2 columns</string>
    <string name="pref_number_columns_3">3 columns</string>
    <string name="pref_number_columns_4">4 columns</string>
    <string name="pref_number_columns_5">5 columns</string>
    <string name="pref_number_columns_default_value">3</string>

</resources>