<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/image_view_dialog_image_title"
            style="@style/AlertDialog.Heading" />

        <TextView
            android:id="@+id/image_view_dialog_title"
            style="@style/AlertDialog.Detail" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:text="@string/image_view_dialog_image_width"
                style="@style/AlertDialog.Heading"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                />
            <TextView
                android:text="@string/image_view_dialog_image_height"
                style="@style/AlertDialog.Heading"
                android:layout_weight="1"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/image_view_dialog_width"
                style="@style/AlertDialog.Detail" />
            <TextView
                android:id="@+id/image_view_dialog_height"
                style="@style/AlertDialog.Detail" />
        </LinearLayout>

        <TextView
            android:text="@string/image_view_dialog_image_referer"
            style="@style/AlertDialog.Heading" />

        <TextView
            android:id="@+id/image_view_dialog_referer"
            style="@style/AlertDialog.Detail" />
    </LinearLayout>
</ScrollView>